--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Hello WOrld</title>
+    </head>
+    <body>
+            Hello World
+    </body>
+</html>
