--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
     </head>
     <body>
             Hello World
-        <h1> Helloooo <h1>
+        <h1 style="color: blue;"> Helloooo <h1>
     </body>
 </html>
